welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:13: error: not found: value estSurBlanc
} while (estSurBlanc())
         ^